force-app/main/default/objects/Product2/fields/Denmark__c.field-meta.xml
<CustomField>
    <fullName>Denmark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denmark</label>
    <type>Checkbox</type>
</CustomField>