force-app/main/default/objects/Product2/fields/Finland__c.field-meta.xml
<CustomField>
    <fullName>Finland__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finland</label>
    <type>Checkbox</type>
</CustomField>