force-app/main/default/objects/Product2/fields/Germany__c.field-meta.xml
<CustomField>
    <fullName>Germany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Germany</label>
    <type>Checkbox</type>
</CustomField>