force-app/main/default/objects/Product2/fields/Norway__c.field-meta.xml
<CustomField>
    <fullName>Norway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Norway</label>
    <type>Checkbox</type>
</CustomField>