force-app/main/default/objects/Product2/fields/Selling_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Selling_End_Date__c</fullName>
    <label>Selling End Date</label>
    <type>Date</type>
</CustomField>