force-app/main/default/objects/Product2/fields/Selling_Region__c.field-meta.xml
<CustomField>
    <fullName>Selling_Region__c</fullName>
    <label>Selling Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>