force-app/main/default/objects/Product2/fields/Selling_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Selling_Start_Date__c</fullName>
    <label>Selling Start Date</label>
    <type>Date</type>
</CustomField>