force-app/main/default/objects/Product2/fields/Singapore__c.field-meta.xml
<CustomField>
    <fullName>Singapore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Singapore</label>
    <type>Checkbox</type>
</CustomField>