force-app/main/default/objects/Product2/fields/Taiwan__c.field-meta.xml
<CustomField>
    <fullName>Taiwan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taiwan</label>
    <type>Checkbox</type>
</CustomField>