force-app/main/default/objects/Product2/recordTypes/Basic_Product.recordType-meta.xml
<RecordType>
    <fullName>Basic_Product</fullName>
    <active>true</active>
    <label>Basic Product</label>
</RecordType>