force-app/main/default/objects/Product2/recordTypes/Seasonal_Product.recordType-meta.xml
<RecordType>
    <fullName>Seasonal_Product</fullName>
    <active>true</active>
    <label>Seasonal Product</label>
</RecordType>